vlib/v/parser/tests/fixed_arr_len_cap_attr_err.vv
fn new_board() [][]string {
    mut board := [3][]string{ len: 3, init: []string{ len: 3, init: '' } }
    for i in 0..9 {
        board[i / 3][i % 3] = (i + 1).str()
    }
    return board
}
